# medical-records-center

./: .gitignore  API-ENDPOINTS-SECURITY-VALIDATION.md  APPOINTMENT_SYSTEM_IMPLEMENTATION.md  AUDIT-LOGGING-COMPLIANCE-VALIDATION.md  COMPONENT-INTEGRATION-TEST.md  DATABASE-SCHEMA-ENCRYPTION-VALIDATION.md  DATASET_GENERATION_PROMPT.md  DESIGN_PROPOSAL.md  DISASTER-RECOVERY-BACKUP-VALIDATION.md  INSTALLATION.md  INTER-SERVER-COMM.md  INTER_USER_DATA_TRANSFER_TEST.md  INTRUSION-DETECTION-RESPONSE-VALIDATION.md  LAB_RESULTS_IMPLEMENTATION.md  MAXIMUM-SECURITY-GUIDE.md  MedicalRecordsCenter.sln  PATIENT_NAME_AND_FREQUENCY_FIX.md  PROJECT_INFO.md  QUEUE_MANAGEMENT_IMPLEMENTATION.md  README-SECURITY.md  README.md  SIP-PROTOCOL-INTEGRITY-VALIDATION.md  SIP-SECURITY-ARCHITECTURE.md  USER-ROLES-PERMISSIONS-VALIDATION.md  VITAL_SIGNS_IMPLEMENTATION.md  ZERO-TRUST-ARCHITECTURE-VALIDATION.md  check_counts.js  convert-icon.js  main.js  mrc-architecture.html  package-lock.json  package.json  preload.js  test-messenger.html  test-password-reset.html  test-registration.html
.gsd/: ARCHITECTURE.md  CONSOLIDATION_PLAN.md  IMPLEMENTATION_PLAN_NEXTJS.md  ROADMAP.md  SPEC.md  SRS_NEXTJS.md  STACK.md  STATE.md
MedicalRecordsCenter.Data/: MedicalRecordsCenter.Data.csproj  MedicalRecordsDbContext.cs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs  models.rs  security.rs
src-tauri/src/commands/: appointments.rs  audit.rs  auth.rs  dashboard.rs  lab_results.rs  medical_records.rs  mod.rs  patients.rs  prescriptions.rs  security.rs  system.rs  users.rs
(+393 files in other folders)
